style: fix logoContainer causing horizontal scroll bar

--- a/src/style.scss
+++ b/src/style.scss
@@ -321,7 +321,7 @@ $primary-color: #8136e2;
   }
 
   .logoContainer {
-    width: 100%;
+    width: 97%;
     position: absolute;
     bottom: 2em;
 
